# taxi_demand_predictor

./: README.md  pyproject.toml
.github/workflows/: feature_pipeline.yaml  inference_pipeline.yaml
notebooks/: 01_load_and_validate_raw_data.ipynb  02_transform_raw_data_into_ts_data.ipynb  03_transform_ts_data_into_features_and_targets.ipynb  04_transform_raw_data_into_features_and_targets.ipynb  05_plot_training_data.ipynb  06_baseline_model.ipynb  07_xgboost_model.ipynb  08_lightgbm_model.ipynb  09_lightgbm_feature_engineering_model.ipynb  10_lightgbm_hyperparameter_tunning.ipynb  11_backfill_feature_store.ipynb  12_simulated_feature_pipeline.ipynb  13_model_training_pipeline.ipynb  14_inference_pipeline.ipynb
src/: app.py  app_component.py  config.py  data.py  data_split.py  feature_store_api.py  inference.py  model.py  paths.py  plot.py
