[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Carlos Melo <carlos.fab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
pandas = "^2.1.0"
pyarrow = "^13.0.0"
tqdm = "^4.66.1"
plotly = "^5.17.0"
scikit-learn = "^1.3.1"
xgboost = "^2.0.0"
mkdocs = "^1.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
